# harpia

./: .gitignore  README.md  flight_data.json  flight_data_gauss.json  flight_data_gauss_fixed.json  flight_data_gauss_fixed_good.json  flight_data_wrong.json  harpia (copy).launch  harpia.launch
json/: hardware.json  missao.json  safety_conditions.json  sconfig.json
pddl/: plan.pddl  problem.pddl
results/: mission_log.json  (+2 more)
src/fault_detection/: CMakeLists.txt  package.xml
src/fault_detection/anomaly_detection/scripts/: anomaly_detector.py  listener.py
src/fault_detection/anomaly_detection/scripts/libs/: NoiseGenerator.py  anomalyDetection.py  clustering.py  loadData.py  uavAction.py
src/fault_detection/anomaly_detection/src/: DroneInfoCompiler.cpp
src/fault_detection/models_train/2.AnomalyDetection/: generate_flight_data.py
src/fault_detection/models_train/2.AnomalyDetection/Data/: flight_data_gauss_teste.json
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/: LSTM_Roll_Pitch_Yaw_Scaled.ipynb  PCA_values_alt1  scaler_model_alt.pkl
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/.ipynb_checkpoints/: LSTM_Roll_Pitch_Yaw_not_Scaled-checkpoint.ipynb
src/fault_detection/models_train/2.AnomalyDetection/Scripts/JupyterNotebook/output/: PCA_values_alt  PCA_values_alt2  pca_model_alt.pkl  tree_pca_alt.pkl
src/fault_detection/models_train/2.AnomalyDetection/libs/: NoiseGenerator.py
src/fault_detection/scripts/: listener.py
src/fault_detection/weather_check/scripts/: weather_check_server.py
(+136 files in other folders)
